refactor to use event listeners

--- a/src/index.html
+++ b/src/index.html
@@ -16,17 +16,17 @@
 
         <section class="column-1">
             <div class="component nst-component">
-                <button onclick="nst.toggle(event)">
+                <button class="nst-toggle">
         native<br/>slideToggle</button>
                 <div class="content nst-content"></div>
             </div>
             <div class="component nst-component">
-                <button onclick="nst.toggle(event)">
+                <button class="nst-toggle">
         native<br/>slideToggle</button>
                 <div class="content nst-content"></div>
             </div>
             <div class="component nst-component">
-                <button onclick="nst.toggle(event)">
+                <button class="nst-toggle">
         native<br/>slideToggle</button>
                 <div class="content nst-content"></div>
             </div>
@@ -35,19 +35,19 @@
         <section class="column-2">
 
             <div class="component">
-                <button onclick="jQueryToggle(event)">
+                <button class="jq-toggle">
         jQuery<br/>slideToggle</button>
                 <div class="content"> </div>
             </div>
 
             <div class="component">
-                <button onclick="jQueryToggle(event)">
+                <button class="jq-toggle">
         jQuery<br/>slideToggle</button>
                 <div class="content"> </div>
             </div>
 
             <div class="component">
-                <button onclick="jQueryToggle(event)">
+                <button class="jq-toggle">
         jQuery<br/>slideToggle</button>
                 <div class="content"> </div>
             </div>
