add ability to start with collapsed state

--- a/src/index.html
+++ b/src/index.html
@@ -20,7 +20,7 @@
         native<br/>slideToggle</button>
                 <div class="content nst-content"></div>
             </div>
-            <div class="component nst-component">
+            <div class="component nst-component nst-is-collapsed">
                 <button class="nst-toggle">
         native<br/>slideToggle</button>
                 <div class="content nst-content"></div>
@@ -43,7 +43,7 @@
             <div class="component">
                 <button class="jq-toggle">
         jQuery<br/>slideToggle</button>
-                <div class="content"> </div>
+                <div class="content" style="display:none;"> </div>
             </div>
 
             <div class="component">
